--- a/docs/reference/libags-audio/libags_audio-sections.txt.in
+++ b/docs/reference/libags-audio/libags_audio-sections.txt.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2023 Joël Krähemann
+# Copyright (C) 2005-2024 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -898,13 +898,17 @@ ags_audio_loop_get_type
 <TITLE>AgsAudioSignal</TITLE>
 AGS_AUDIO_SIGNAL_GET_OBJ_MUTEX
 AGS_AUDIO_SIGNAL_GET_STREAM_MUTEX
+AGS_AUDIO_SIGNAL_GET_BACKLOG_MUTEX
 AgsAudioSignalFlags
+AgsAudioSignalStreamMode
 ags_audio_signal_get_obj_mutex
 ags_audio_signal_stream_lock
 ags_audio_signal_stream_unlock
 ags_audio_signal_test_flags
 ags_audio_signal_set_flags
 ags_audio_signal_unset_flags
+ags_audio_signal_test_key_format
+ags_audio_signal_set_key_format
 ags_stream_alloc
 ags_stream_free
 ags_stream_slice_alloc
@@ -921,12 +925,18 @@ ags_audio_signal_get_buffer_size
 ags_audio_signal_set_buffer_size
 ags_audio_signal_get_format
 ags_audio_signal_set_format
+ags_audio_signal_get_attack
+ags_audio_signal_set_attack
 ags_audio_signal_get_note
 ags_audio_signal_set_note
 ags_audio_signal_add_note
 ags_audio_signal_remove_note
 ags_audio_signal_get_stream
 ags_audio_signal_set_stream
+ags_audio_signal_test_stream_mode
+ags_audio_signal_set_stream_mode
+ags_audio_signal_get_note_256th_attack
+ags_audio_signal_set_note_256th_attack
 ags_audio_signal_refresh_data
 ags_audio_signal_add_stream
 ags_audio_signal_stream_resize
@@ -959,6 +969,7 @@ AgsAudioSignal
 AgsAudioSignalClass
 ags_audio_signal_flags_get_type
 ags_audio_signal_get_type
+ags_audio_signal_stream_mode_get_type
 </SECTION>
 
 <SECTION>
@@ -1638,6 +1649,10 @@ ags_chorus_util_get_pitch_type
 ags_chorus_util_set_pitch_type
 ags_chorus_util_get_pitch_util
 ags_chorus_util_set_pitch_util
+ags_chorus_util_get_note_256th_mode
+ags_chorus_util_set_note_256th_mode
+ags_chorus_util_get_offset_256th
+ags_chorus_util_set_offset_256th
 ags_chorus_util_compute_s8
 ags_chorus_util_compute_s16
 ags_chorus_util_compute_s24
@@ -1718,6 +1733,14 @@ ags_common_pitch_util_get_vibrato_tuning
 ags_common_pitch_util_set_vibrato_tuning
 ags_common_pitch_util_get_vibrato_lfo_offset
 ags_common_pitch_util_set_vibrato_lfo_offset
+ags_common_pitch_util_get_frame_count
+ags_common_pitch_util_set_frame_count
+ags_common_pitch_util_get_offset
+ags_common_pitch_util_set_offset
+ags_common_pitch_util_get_note_256th_mode
+ags_common_pitch_util_set_note_256th_mode
+ags_common_pitch_util_get_offset_256th
+ags_common_pitch_util_set_offset_256th
 ags_common_pitch_util_pitch
 <SUBSECTION Standard>
 AgsCommonPitchUtil
@@ -2097,6 +2120,14 @@ ags_fast_pitch_util_get_vibrato_tuning
 ags_fast_pitch_util_set_vibrato_tuning
 ags_fast_pitch_util_get_vibrato_lfo_offset
 ags_fast_pitch_util_set_vibrato_lfo_offset
+ags_fast_pitch_util_get_frame_count
+ags_fast_pitch_util_set_frame_count
+ags_fast_pitch_util_get_offset
+ags_fast_pitch_util_set_offset
+ags_fast_pitch_util_get_note_256th_mode
+ags_fast_pitch_util_set_note_256th_mode
+ags_fast_pitch_util_get_offset_256th
+ags_fast_pitch_util_set_offset_256th
 ags_fast_pitch_util_pitch_s8
 ags_fast_pitch_util_pitch_s16
 ags_fast_pitch_util_pitch_s24
@@ -2229,6 +2260,14 @@ ags_fluid_interpolate_4th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_4th_order_util_set_vibrato_tuning
 ags_fluid_interpolate_4th_order_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_4th_order_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_4th_order_util_get_frame_count
+ags_fluid_interpolate_4th_order_util_set_frame_count
+ags_fluid_interpolate_4th_order_util_get_offset
+ags_fluid_interpolate_4th_order_util_set_offset
+ags_fluid_interpolate_4th_order_util_get_note_256th_mode
+ags_fluid_interpolate_4th_order_util_set_note_256th_mode
+ags_fluid_interpolate_4th_order_util_get_offset_256th
+ags_fluid_interpolate_4th_order_util_set_offset_256th
 ags_fluid_interpolate_4th_order_util_pitch_s8
 ags_fluid_interpolate_4th_order_util_pitch_s16
 ags_fluid_interpolate_4th_order_util_pitch_s24
@@ -2282,6 +2321,14 @@ ags_fluid_interpolate_7th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_7th_order_util_set_vibrato_tuning
 ags_fluid_interpolate_7th_order_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_7th_order_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_7th_order_util_get_frame_count
+ags_fluid_interpolate_7th_order_util_set_frame_count
+ags_fluid_interpolate_7th_order_util_get_offset
+ags_fluid_interpolate_7th_order_util_set_offset
+ags_fluid_interpolate_7th_order_util_get_note_256th_mode
+ags_fluid_interpolate_7th_order_util_set_note_256th_mode
+ags_fluid_interpolate_7th_order_util_get_offset_256th
+ags_fluid_interpolate_7th_order_util_set_offset_256th
 ags_fluid_interpolate_7th_order_util_pitch_s8
 ags_fluid_interpolate_7th_order_util_pitch_s16
 ags_fluid_interpolate_7th_order_util_pitch_s24
@@ -2335,6 +2382,14 @@ ags_fluid_interpolate_linear_util_get_vibrato_tuning
 ags_fluid_interpolate_linear_util_set_vibrato_tuning
 ags_fluid_interpolate_linear_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_linear_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_linear_util_get_frame_count
+ags_fluid_interpolate_linear_util_set_frame_count
+ags_fluid_interpolate_linear_util_get_offset
+ags_fluid_interpolate_linear_util_set_offset
+ags_fluid_interpolate_linear_util_get_note_256th_mode
+ags_fluid_interpolate_linear_util_set_note_256th_mode
+ags_fluid_interpolate_linear_util_get_offset_256th
+ags_fluid_interpolate_linear_util_set_offset_256th
 ags_fluid_interpolate_linear_util_pitch_s8
 ags_fluid_interpolate_linear_util_pitch_s16
 ags_fluid_interpolate_linear_util_pitch_s24
@@ -2388,6 +2443,14 @@ ags_fluid_interpolate_none_util_get_vibrato_tuning
 ags_fluid_interpolate_none_util_set_vibrato_tuning
 ags_fluid_interpolate_none_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_none_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_none_util_get_frame_count
+ags_fluid_interpolate_none_util_set_frame_count
+ags_fluid_interpolate_none_util_get_offset
+ags_fluid_interpolate_none_util_set_offset
+ags_fluid_interpolate_none_util_get_note_256th_mode
+ags_fluid_interpolate_none_util_set_note_256th_mode
+ags_fluid_interpolate_none_util_get_offset_256th
+ags_fluid_interpolate_none_util_set_offset_256th
 ags_fluid_interpolate_none_util_pitch_s8
 ags_fluid_interpolate_none_util_pitch_s16
 ags_fluid_interpolate_none_util_pitch_s24
@@ -2473,6 +2536,10 @@ ags_fm_synth_util_get_frame_count
 ags_fm_synth_util_set_frame_count
 ags_fm_synth_util_get_offset
 ags_fm_synth_util_set_offset
+ags_fm_synth_util_get_note_256th_mode
+ags_fm_synth_util_set_note_256th_mode
+ags_fm_synth_util_get_offset_256th
+ags_fm_synth_util_set_offset_256th
 ags_fm_synth_util_compute_sin_s8
 ags_fm_synth_util_compute_sin_s16
 ags_fm_synth_util_compute_sin_s24
@@ -3893,6 +3960,8 @@ ags_fx_notation_audio_set_flags
 ags_fx_notation_audio_unset_flags
 ags_fx_notation_audio_get_pattern_mode
 ags_fx_notation_audio_set_pattern_mode
+ags_fx_notation_audio_get_note_256th_mode
+ags_fx_notation_audio_set_note_256th_mode
 ags_fx_notation_audio_get_feed_note
 ags_fx_notation_audio_add_feed_note
 ags_fx_notation_audio_remove_feed_note
@@ -5421,6 +5490,14 @@ ags_hq_pitch_util_get_vibrato_tuning
 ags_hq_pitch_util_set_vibrato_tuning
 ags_hq_pitch_util_get_vibrato_lfo_offset
 ags_hq_pitch_util_set_vibrato_lfo_offset
+ags_hq_pitch_util_get_frame_count
+ags_hq_pitch_util_set_frame_count
+ags_hq_pitch_util_get_offset
+ags_hq_pitch_util_set_offset
+ags_hq_pitch_util_get_note_256th_mode
+ags_hq_pitch_util_set_note_256th_mode
+ags_hq_pitch_util_get_offset_256th
+ags_hq_pitch_util_set_offset_256th
 ags_hq_pitch_util_pitch_s8
 ags_hq_pitch_util_pitch_s16
 ags_hq_pitch_util_pitch_s24
@@ -6611,6 +6688,17 @@ ags_midi_ci_util_get_type
 </SECTION>
 
 <SECTION>
+<FILE>ags_midi_clip</FILE>
+ags_midi_clip_util_alloc
+ags_midi_clip_util_free
+ags_midi_clip_util_copy
+<SUBSECTION Standard>
+AGS_TYPE_MIDI_CLIP_UTIL
+AgsMidiClipUtil
+ags_midi_clip_util_get_type
+</SECTION>
+
+<SECTION>
 <FILE>ags_midi_file</FILE>
 <TITLE>AgsMidiFile</TITLE>
 AGS_MIDI_FILE_GET_OBJ_MUTEX
@@ -6996,6 +7084,8 @@ ags_midi_util_get_song_select
 ags_midi_util_to_smf
 ags_midi_util_delta_time_to_offset
 ags_midi_util_offset_to_delta_time
+ags_midi_util_delta_time_to_note_256th_offset
+ags_midi_util_note_256th_offset_to_delta_time
 <SUBSECTION Standard>
 AGS_TYPE_MIDI_UTIL
 AgsMidiUtil
@@ -7053,6 +7143,10 @@ ags_noise_util_get_frame_count
 ags_noise_util_set_frame_count
 ags_noise_util_get_offset
 ags_noise_util_set_offset
+ags_noise_util_get_note_256th_mode
+ags_noise_util_set_note_256th_mode
+ags_noise_util_get_offset_256th
+ags_noise_util_set_offset_256th
 ags_noise_util_compute_s8
 ags_noise_util_compute_s16
 ags_noise_util_compute_s24
@@ -7149,6 +7243,8 @@ ags_note_get_obj_mutex
 ags_note_test_flags
 ags_note_set_flags
 ags_note_unset_flags
+ags_note_test_key_format
+ags_note_set_key_format
 ags_note_sort_func
 ags_note_get_is_minor
 ags_note_set_is_minor
@@ -7174,6 +7270,12 @@ ags_note_get_release
 ags_note_set_release
 ags_note_get_ratio
 ags_note_set_ratio
+ags_note_get_feed_x_256th
+ags_note_set_feed_x_256th
+ags_note_get_x0_256th
+ags_note_set_x0_256th
+ags_note_get_x1_256th
+ags_note_set_x1_256th
 ags_note_find_prev
 ags_note_find_next
 ags_note_length_to_smf_delta_time
@@ -9142,6 +9244,25 @@ ags_reset_note_get_type
 </SECTION>
 
 <SECTION>
+<FILE>ags_reset_recall_staging</FILE>
+<TITLE>AgsResetRecallStaging</TITLE>
+ags_reset_recall_staging_add
+ags_reset_recall_staging_remove
+ags_reset_recall_staging_get_instance
+ags_reset_recall_staging_new
+<SUBSECTION Standard>
+AGS_IS_RESET_RECALL_STAGING
+AGS_IS_RESET_RECALL_STAGING_CLASS
+AGS_RESET_RECALL_STAGING
+AGS_RESET_RECALL_STAGING_CLASS
+AGS_RESET_RECALL_STAGING_GET_CLASS
+AGS_TYPE_RESET_RECALL_STAGING
+AgsResetRecallStaging
+AgsResetRecallStagingClass
+ags_reset_recall_staging_get_type
+</SECTION>
+
+<SECTION>
 <FILE>ags_resize_audio</FILE>
 <TITLE>AgsResizeAudio</TITLE>
 ags_resize_audio_new
@@ -9241,6 +9362,25 @@ AGS_TYPE_SET_AUDIO_CHANNELS
 AgsSetAudioChannels
 AgsSetAudioChannelsClass
 ags_set_audio_channels_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_set_backlog</FILE>
+<TITLE>AgsSetBacklog</TITLE>
+ags_set_backlog_add
+ags_set_backlog_remove
+ags_set_backlog_get_instance
+ags_set_backlog_new
+<SUBSECTION Standard>
+AGS_IS_SET_BACKLOG
+AGS_IS_SET_BACKLOG_CLASS
+AGS_SET_BACKLOG
+AGS_SET_BACKLOG_CLASS
+AGS_SET_BACKLOG_GET_CLASS
+AGS_TYPE_SET_BACKLOG
+AgsSetBacklog
+AgsSetBacklogClass
+ags_set_backlog_get_type
 </SECTION>
 
 <SECTION>
@@ -9524,6 +9664,10 @@ ags_sf2_synth_util_get_pitch_type
 ags_sf2_synth_util_set_pitch_type
 ags_sf2_synth_util_get_pitch_util
 ags_sf2_synth_util_set_pitch_util
+ags_sf2_synth_util_get_note_256th_mode
+ags_sf2_synth_util_set_note_256th_mode
+ags_sf2_synth_util_get_offset_256th
+ags_sf2_synth_util_set_offset_256th
 ags_sf2_synth_util_load_instrument
 ags_sf2_synth_util_load_midi_locale
 ags_sf2_synth_util_compute_s8
@@ -9805,6 +9949,10 @@ ags_sfz_synth_util_get_pitch_type
 ags_sfz_synth_util_set_pitch_type
 ags_sfz_synth_util_get_pitch_util
 ags_sfz_synth_util_set_pitch_util
+ags_sfz_synth_util_get_note_256th_mode
+ags_sfz_synth_util_set_note_256th_mode
+ags_sfz_synth_util_get_offset_256th
+ags_sfz_synth_util_set_offset_256th
 ags_sfz_synth_util_load_instrument
 ags_sfz_synth_util_compute_s8
 ags_sfz_synth_util_compute_s16
@@ -10232,6 +10380,10 @@ ags_synth_util_get_frame_count
 ags_synth_util_set_frame_count
 ags_synth_util_get_offset
 ags_synth_util_set_offset
+ags_synth_util_get_note_256th_mode
+ags_synth_util_set_note_256th_mode
+ags_synth_util_get_offset_256th
+ags_synth_util_set_offset_256th
 ags_synth_util_get_xcross_count_s8
 ags_synth_util_get_xcross_count_s16
 ags_synth_util_get_xcross_count_s24
@@ -10433,6 +10585,14 @@ ags_tremolo_util_get_tremolo_tuning
 ags_tremolo_util_set_tremolo_tuning
 ags_tremolo_util_get_tremolo_lfo_offset
 ags_tremolo_util_set_tremolo_lfo_offset
+ags_tremolo_util_get_frame_count
+ags_tremolo_util_set_frame_count
+ags_tremolo_util_get_offset
+ags_tremolo_util_set_offset
+ags_tremolo_util_get_note_256th_mode
+ags_tremolo_util_set_note_256th_mode
+ags_tremolo_util_get_offset_256th
+ags_tremolo_util_set_offset_256th
 ags_tremolo_util_compute_s8
 ags_tremolo_util_compute_s16
 ags_tremolo_util_compute_s24
@@ -10620,6 +10780,14 @@ ags_wah_wah_util_get_wah_wah_tuning
 ags_wah_wah_util_set_wah_wah_tuning
 ags_wah_wah_util_get_wah_wah_lfo_offset
 ags_wah_wah_util_set_wah_wah_lfo_offset
+ags_wah_wah_util_get_frame_count
+ags_wah_wah_util_set_frame_count
+ags_wah_wah_util_get_offset
+ags_wah_wah_util_set_offset
+ags_wah_wah_util_get_note_256th_mode
+ags_wah_wah_util_set_note_256th_mode
+ags_wah_wah_util_get_offset_256th
+ags_wah_wah_util_set_offset_256th
 ags_wah_wah_util_compute_s8
 ags_wah_wah_util_compute_s16
 ags_wah_wah_util_compute_s24
