--- a/docs/reference/libags-gui/libags_gui-sections.txt.in
+++ b/docs/reference/libags-gui/libags_gui-sections.txt.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2023 Joël Krähemann
+# Copyright (C) 2005-2024 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -274,6 +274,130 @@ ags_expander_set_get_type
 </SECTION>
 
 <SECTION>
+<FILE>ags_file_dialog</FILE>
+<TITLE>AgsFileDialog</TITLE>
+ags_file_dialog_get_file_widget
+ags_file_dialog_response
+ags_file_dialog_new
+<SUBSECTION Standard>
+AGS_FILE_DIALOG
+AGS_FILE_DIALOG_CLASS
+AGS_FILE_DIALOG_GET_CLASS
+AGS_IS_FILE_DIALOG
+AGS_IS_FILE_DIALOG_CLASS
+AGS_TYPE_FILE_DIALOG
+AgsFileDialog
+AgsFileDialogClass
+ags_file_dialog_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_file_widget</FILE>
+<TITLE>AgsFileWidget</TITLE>
+AGS_FILE_WIDGET_MAX_RECENTLY_USED
+AGS_FILE_WIDGET_LOCATION_OPEN_RECENT
+AGS_FILE_WIDGET_LOCATION_OPEN_START_HERE
+AGS_FILE_WIDGET_LOCATION_OPEN_USER_HOME
+AGS_FILE_WIDGET_LOCATION_OPEN_USER_DESKTOP
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_PICTURES
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_MUSIC
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_VIDEOS
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_DOWNLOADS
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_DOCUMENTS
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_APP_HOME
+AGS_FILE_WIDGET_LOCATION_OPEN_FOLDER_APP_GENERIC
+AGS_FILE_WIDGET_DEFAULT_FILE_MAGIC_EXECUTABLE
+AgsFileWidgetFlags
+AgsFileWidgetFileAction
+AgsFileWidgetFileFilter
+ags_file_widget_test_flags
+ags_file_widget_set_flags
+ags_file_widget_unset_flags
+ags_file_widget_test_file_action
+ags_file_widget_set_file_action
+ags_file_widget_test_file_filter
+ags_file_widget_set_file_filter
+ags_file_widget_set_default_bundle
+ags_file_widget_get_default_bundle
+ags_file_widget_set_home_path
+ags_file_widget_get_home_path
+ags_file_widget_set_app_home_path
+ags_file_widget_get_app_home_path
+ags_file_widget_set_app_generic_path
+ags_file_widget_get_app_generic_path
+ags_file_widget_set_default_path
+ags_file_widget_get_default_path
+ags_file_widget_set_current_path
+ags_file_widget_get_current_path
+ags_file_widget_set_recently_used_filename
+ags_file_widget_get_recently_used_filename
+ags_file_widget_set_bookmark_filename
+ags_file_widget_get_bookmark_filename
+ags_file_widget_set_file_magic_executable
+ags_file_widget_get_file_magic_executable
+ags_file_widget_get_recently_used
+ags_file_widget_read_recently_used
+ags_file_widget_write_recently_used
+ags_file_widget_get_location
+ags_file_widget_add_location
+ags_file_widget_remove_location
+ags_file_widget_get_bookmark
+ags_file_widget_add_bookmark
+ags_file_widget_remove_bookmark
+ags_file_widget_read_bookmark
+ags_file_widget_write_bookmark
+ags_file_widget_get_file_filter_suffix
+ags_file_widget_get_filename
+ags_file_widget_get_filenames
+ags_file_widget_refresh
+ags_file_widget_create_dir
+ags_file_widget_new
+<SUBSECTION Standard>
+AGS_FILE_WIDGET
+AGS_FILE_WIDGET_CLASS
+AGS_FILE_WIDGET_GET_CLASS
+AGS_IS_FILE_WIDGET
+AGS_IS_FILE_WIDGET_CLASS
+AGS_TYPE_FILE_WIDGET
+AgsFileWidget
+AgsFileWidgetClass
+ags_file_widget_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_icon_link</FILE>
+<TITLE>AgsIconLink</TITLE>
+AGS_ICON_LINK_DEFAULT_SEGMENT_WIDTH
+AGS_ICON_LINK_DEFAULT_SEGMENT_HEIGHT
+AGS_ICON_LINK_DEFAULT_SEGMENT_PADDING
+AGS_ICON_LINK_DEFAULT_SEGMENT_COUNT
+AgsIconLinkFlags
+ags_icon_link_test_flags
+ags_icon_link_set_flags
+ags_icon_link_unset_flags
+ags_icon_link_get_icon_name
+ags_icon_link_set_icon_name
+ags_icon_link_get_action
+ags_icon_link_set_action
+ags_icon_link_get_link_text
+ags_icon_link_set_link_text
+ags_icon_link_delete_event
+ags_icon_link_copy_event
+ags_icon_link_clicked
+ags_icon_link_new
+<SUBSECTION Standard>
+AGS_ICON_LINK
+AGS_ICON_LINK_CLASS
+AGS_ICON_LINK_GET_CLASS
+AGS_IS_ICON_LINK
+AGS_IS_ICON_LINK_CLASS
+AGS_TYPE_ICON_LINK
+AgsIconLink
+AgsIconLinkClass
+ags_icon_link_get_type
+</SECTION>
+
+<SECTION>
 <FILE>ags_indicator</FILE>
 <TITLE>AgsIndicator</TITLE>
 AGS_INDICATOR_DEFAULT_SEGMENT_WIDTH
@@ -301,6 +425,31 @@ AGS_TYPE_INDICATOR
 AgsIndicator
 AgsIndicatorClass
 ags_indicator_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_input_dialog</FILE>
+<TITLE>AgsInputDialog</TITLE>
+AgsInputDialogFlags
+ags_input_dialog_test_flags
+ags_input_dialog_set_flags
+ags_input_dialog_unset_flags
+ags_input_dialog_set_text
+ags_input_dialog_set_spin_button_label
+ags_input_dialog_get_entry
+ags_input_dialog_get_spin_button
+ags_input_dialog_response
+ags_input_dialog_new
+<SUBSECTION Standard>
+AGS_INPUT_DIALOG
+AGS_INPUT_DIALOG_CLASS
+AGS_INPUT_DIALOG_GET_CLASS
+AGS_IS_INPUT_DIALOG
+AGS_IS_INPUT_DIALOG_CLASS
+AGS_TYPE_INPUT_DIALOG
+AgsInputDialog
+AgsInputDialogClass
+ags_input_dialog_get_type
 </SECTION>
 
 <SECTION>
@@ -810,5 +959,6 @@ ags_tempo_get_type
 <FILE>ags_widget_marshal</FILE>
 ags_widget_cclosure_marshal_VOID__STRING_INT
 ags_widget_cclosure_marshal_VOID__OBJECT_INT
+ags_widget_cclosure_marshal_OBJECT__VOID
 </SECTION>
 
