--- a/docs/reference/libags-audio/libags_audio.types.in
+++ b/docs/reference/libags-audio/libags_audio.types.in
@@ -1,5 +1,5 @@
 # GSequencer - Advanced GTK Sequencer 
-# Copyright (C) 2005-2023 Joël Krähemann
+# Copyright (C) 2005-2024 Joël Krähemann
 # 
 # This file is part of GSequencer.
 #
@@ -452,3 +452,24 @@ ags_wasapi_devout_get_type
 ags_wave_flags_get_type
 ags_wave_get_type
 ags_wave_loader_get_type
+ags_apply_sf2_midi_locale_get_type
+ags_apply_sf2_synth_get_type
+ags_fx_sf2_synth_audio_get_type
+ags_fx_sf2_synth_audio_processor_get_type
+ags_fx_sf2_synth_audio_signal_get_type
+ags_fx_sf2_synth_channel_get_type
+ags_fx_sf2_synth_channel_processor_get_type
+ags_fx_sf2_synth_recycling_get_type
+ags_ipatch_dls2_reader_get_type
+ags_ipatch_flags_get_type
+ags_ipatch_get_type
+ags_ipatch_gig_reader_get_type
+ags_ipatch_sample_get_type
+ags_ipatch_sf2_reader_get_type
+ags_open_sf2_instrument_get_type
+ags_open_sf2_sample_get_type
+ags_sf2_loader_get_type
+ags_sf2_midi_locale_loader_get_type
+ags_sf2_synth_generator_get_type
+ags_sf2_synth_util_get_type
+ags_sf2_synth_util_loop_mode_get_type
