--- a/docs/reference/libags-gui/libags_gui.xml.in
+++ b/docs/reference/libags-gui/libags_gui.xml.in
@@ -7,7 +7,7 @@
   %gtkdocentities;
 ]>
 
-<!-- Copyright (C) 2005-2018 Jo\u00EBl Kr\u00E4hemann -->
+<!-- Copyright (C) 2005-2024 Jo\u00EBl Kr\u00E4hemann -->
 <!-- Permission is granted to copy, distribute and/or modify this document -->
 <!-- under the terms of the GNU Free Documentation License, Version 1.3 -->
 <!-- or any later version published by the Free Software Foundation; -->
@@ -33,6 +33,9 @@
     <xi:include href="xml/ags_dial.xml"/>
     <xi:include href="xml/ags_expander.xml"/>
     <xi:include href="xml/ags_expander_set.xml"/>
+    <xi:include href="xml/ags_file_dialog.xml"/>
+    <xi:include href="xml/ags_file_widget.xml"/>
+    <xi:include href="xml/ags_icon_link.xml"/>
     <xi:include href="xml/ags_indicator.xml"/>
     <xi:include href="xml/ags_led.xml"/>
     <xi:include href="xml/ags_led_array.xml"/>
