--- a/Makefile.am
+++ b/Makefile.am
@@ -1058,6 +1058,7 @@ libags_h_sources = \
 	ags/lib/ags_regex.h \
 	ags/lib/ags_regex_util.h \
 	ags/lib/ags_solver_matrix.h \
+	ags/lib/ags_solver_path.h \
 	ags/lib/ags_solver_polynomial.h \
 	ags/lib/ags_solver_vector.h \
 	ags/lib/ags_string_util.h \
@@ -1080,6 +1081,7 @@ libags_c_sources = \
 	ags/lib/ags_regex.c \
 	ags/lib/ags_regex_util.c \
 	ags/lib/ags_solver_matrix.c \
+	ags/lib/ags_solver_path.c \
 	ags/lib/ags_solver_polynomial.c \
 	ags/lib/ags_solver_vector.c \
 	ags/lib/ags_string_util.c \
