--- a/libags.sym.in
+++ b/libags.sym.in
@@ -55,6 +55,8 @@ ags_solver_matrix_get_source_function
 ags_solver_matrix_set_source_function
 ags_solver_matrix_get_row_count
 ags_solver_matrix_get_column_count
+ags_solver_matrix_get_solver_path
+ags_solver_matrix_set_solver_path
 ags_solver_matrix_to_string
 ags_solver_matrix_parse
 ags_solver_matrix_insert_vector
@@ -69,6 +71,16 @@ ags_solver_vector_get_polynomial_count
 ags_solver_vector_insert_polynomial
 ags_solver_vector_remove_polynomial
 ags_solver_vector_new
+ags_solver_path_get_type
+ags_solver_path_alloc
+ags_solver_path_copy
+ags_solver_path_free
+ags_solver_path_set_nth_column
+ags_solver_path_get_nth_column
+ags_solver_path_set_nth_row_a
+ags_solver_path_get_nth_row_a
+ags_solver_path_set_nth_row_b
+ags_solver_path_get_nth_row_b
 ags_turtle_get_type
 ags_turtle_flags_get_type
 ags_turtle_read_iriref
