--- a/ags/meson.build
+++ b/ags/meson.build
@@ -184,6 +184,7 @@ libags_sources = files(
   'lib/ags_regex.c',
   'lib/ags_regex_util.c',
   'lib/ags_solver_matrix.c',
+  'lib/ags_solver_path.c',
   'lib/ags_solver_polynomial.c',
   'lib/ags_solver_vector.c',
   'lib/ags_string_util.c',
@@ -1358,6 +1359,7 @@ libags_lib_headers = [
   'lib/ags_time.h',
   'lib/ags_turtle.h',
   'lib/ags_uuid.h',
+  'lib/ags_solver_path.h',
   'lib/ags_solver_polynomial.h',
   'lib/ags_regex.h',
   'lib/ags_regex_util.h',
