--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -252,6 +252,8 @@ ags_file_widget_set_flags
 ags_file_widget_unset_flags
 ags_file_widget_test_file_action
 ags_file_widget_set_file_action
+ags_file_widget_test_file_filter
+ags_file_widget_set_file_filter
 ags_file_widget_set_default_bundle
 ags_file_widget_get_default_bundle
 ags_file_widget_set_home_path
@@ -281,6 +283,7 @@ ags_file_widget_add_bookmark
 ags_file_widget_remove_bookmark
 ags_file_widget_read_bookmark
 ags_file_widget_write_bookmark
+ags_file_widget_get_file_filter_suffix
 ags_file_widget_get_filename
 ags_file_widget_get_filenames
 ags_file_widget_refresh
