implemented ags_soundcard_util_calc_next_note_256th_offset() and ags_soundcard_util_calc_next_note_256th_attack()

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -792,6 +792,7 @@ ags_soundcard_util_adjust_delay_and_attack
 ags_soundcard_util_calc_system_time
 ags_soundcard_util_calc_time_samples
 ags_soundcard_util_calc_time_samples_absolute
+ags_soundcard_util_calc_next_note_256th_offset
 ags_channel_get_type
 ags_channel_flags_get_type
 ags_channel_error_quark
@@ -2654,6 +2655,7 @@ ags_notation_is_note_selected
 ags_notation_find_point
 ags_notation_find_region
 ags_notation_find_offset
+ags_notation_find_note_256th_range
 ags_notation_free_selection
 ags_notation_free_all_selection
 ags_notation_add_point_to_selection
