refactored all soundcard implementations note offset

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -793,6 +793,7 @@ ags_soundcard_util_calc_system_time
 ags_soundcard_util_calc_time_samples
 ags_soundcard_util_calc_time_samples_absolute
 ags_soundcard_util_calc_next_note_256th_offset
+ags_soundcard_util_calc_next_note_256th_attack
 ags_channel_get_type
 ags_channel_flags_get_type
 ags_channel_error_quark
