implementing additional sound staging of AgsRecall for MIDI CC and JACK CV

--- a/Makefile.am
+++ b/Makefile.am
@@ -2606,6 +2606,7 @@ libgsequencer_h_sources = \
 	ags/app/ags_machine_editor_bulk_callbacks.h \
 	ags/app/ags_meta_data_window.h \
 	ags/app/ags_midi_cc_editor.h \
+	ags/app/ags_midi_cc_editor_callbacks.h \
 	ags/app/ags_midi_dialog_callbacks.h \
 	ags/app/ags_midi_dialog.h \
 	ags/app/ags_midi_preferences.h \
