--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1897,6 +1897,8 @@ ags_port_flags_get_type
 ags_port_test_flags
 ags_port_set_flags
 ags_port_unset_flags
+ags_port_get_plugin_port
+ags_port_set_plugin_port
 ags_port_safe_read
 ags_port_safe_read_raw
 ags_port_safe_write
