refactored AgsMachineEditorDialog and AgsMetaDataWindow

--- a/ags/meson.build
+++ b/ags/meson.build
@@ -956,6 +956,7 @@ libgsequencer_sources = files(
   'app/ags_machine_editor_bulk.c',
   'app/ags_machine_editor_bulk_callbacks.c',
   'app/ags_machine_editor_dialog.c',
+  'app/ags_machine_editor_dialog_callbacks.c',
   'app/ags_machine_editor_collection.c',
   'app/ags_machine_editor_collection_callbacks.c',
   'app/ags_machine_editor_listing.c',
