--- a/Makefile.am
+++ b/Makefile.am
@@ -2595,6 +2595,7 @@ libgsequencer_h_sources = \
 	ags/app/ags_machine_editor.h \
 	ags/app/ags_machine_editor_callbacks.h \
 	ags/app/ags_machine_editor_dialog.h \
+	ags/app/ags_machine_editor_dialog_callbacks.h \
 	ags/app/ags_machine_editor_listing.h \
 	ags/app/ags_machine_editor_listing_callbacks.h \
 	ags/app/ags_machine_editor_pad.h \
@@ -2725,6 +2726,7 @@ libgsequencer_c_sources = \
 	ags/app/ags_machine_editor_bulk.c \
 	ags/app/ags_machine_editor_bulk_callbacks.c \
 	ags/app/ags_machine_editor_dialog.c \
+	ags/app/ags_machine_editor_dialog_callbacks.c \
 	ags/app/ags_machine_editor_collection.c \
 	ags/app/ags_machine_editor_collection_callbacks.c \
 	ags/app/ags_machine_editor_listing.c \
