--- a/Makefile.am
+++ b/Makefile.am
@@ -2545,6 +2545,7 @@ libgsequencer_h_sources = \
 	ags/app/ags_connection_editor.h \
 	ags/app/ags_connection_editor_callbacks.h \
 	ags/app/ags_connection_editor_dialog.h \
+	ags/app/ags_connection_editor_dialog_callbacks.h \
 	ags/app/ags_connection_editor_listing.h \
 	ags/app/ags_connection_editor_listing_callbacks.h \
 	ags/app/ags_connection_editor_pad.h \
@@ -2674,6 +2675,7 @@ libgsequencer_c_sources = \
 	ags/app/ags_connection_editor.c \
 	ags/app/ags_connection_editor_callbacks.c \
 	ags/app/ags_connection_editor_dialog.c \
+	ags/app/ags_connection_editor_dialog_callbacks.c \
 	ags/app/ags_connection_editor_listing.c \
 	ags/app/ags_connection_editor_listing_callbacks.c \
 	ags/app/ags_connection_editor_pad.c \
