--- a/ags/meson.build
+++ b/ags/meson.build
@@ -912,6 +912,7 @@ libgsequencer_sources = files(
   'app/ags_connection_editor_line.c',
   'app/ags_connection_editor_line_callbacks.c',
   'app/ags_connection_editor_dialog.c',
+  'app/ags_connection_editor_dialog_callbacks.c',
   'app/ags_effect_bridge.c',
   'app/ags_effect_bridge_callbacks.c',
   'app/ags_effect_bulk.c',
