implemented ags_soundcard_helper_config_get_use_cache() and ags_soundcard_helper_config_get_cache_buffer_size()

--- a/conf/ags-core-audio.conf
+++ b/conf/ags-core-audio.conf
@@ -14,7 +14,7 @@ pcm-channels=2
 format=16
 samplerate=48000
 device=ags-core-audio-devout-0
-use-cache=true
+use-cache=false
 cache-buffer-size=8192
 
 [recall]
