--- a/libags.sym.in
+++ b/libags.sym.in
@@ -23,6 +23,8 @@ ags_soundcard_helper_config_get_pcm_channels
 ags_soundcard_helper_config_get_samplerate
 ags_soundcard_helper_config_get_buffer_size
 ags_soundcard_helper_config_get_format
+ags_soundcard_helper_config_get_use_cache
+ags_soundcard_helper_config_get_cache_buffer_size
 ags_destroy_util_get_type
 ags_destroy_util_dispose_and_unref
 ags_id_generator_create_uuid
